Deploy-ready Flask backend

--- a/.env.sample
+++ b/.env.sample
@@ -1,17 +1,12 @@
-
-# Copy this file to .env and fill in actual secrets
-
-# Zoho CRM OAuth
-ZOHO_ACCESS_TOKEN=your-access-token-here
+ZOHO_CLIENT_ID=1000.NKDDL6UXJ4I54X0UGB3W7ZX6DQ9FQO
+ZOHO_CLIENT_SECRET=83f3063ab1d9dc53d27f66f7a50facdbaf85bb6079
+ZOHO_REFRESH_TOKEN=1000.72809fc42f44fa0cc55cff5d8f4b46852.c919b704c4a0c44fd0d1b7f5e16a830f2
 ZOHO_API_URL=https://www.zohoapis.com/crm/v2/Leads
 
-# Google reCAPTCHA
-RECAPTCHA_SECRET=your-recaptcha-secret
+RECAPTCHA_SECRET=6LfH5y8rAAAAANc0G53uLwq5GMvCqmDqHVpzW3sl
 
-# SMTP Settings
-SMTP_EMAIL=your-email@fun-bet.me
-SMTP_PASSWORD=your-app-password
+SMTP_EMAIL=umesh@fun-bet.me
+SMTP_PASSWORD=Jeix3XzEZFmb
 SMTP_SERVER=smtp.zoho.eu
 
-# App verification link
-VERIFY_URL=https://your-domain.com/verify
+VERIFY_URL=https://fun-bet.me/verify
